--- a/main.tex
+++ b/main.tex
@@ -46,7 +46,7 @@
 
 \include{chapter_statistics}
 \include{chapter_estimators}
-\include{chapter_descriptive}
+\include{chapter_confint}
 
 \part{Inferential statistics}
 
