--- a/chapter_confint.tex
+++ b/chapter_confint.tex
@@ -142,32 +142,43 @@ the \emph{jackknife}.
 
 \subsection{Bootstrap}
 
-A now-popular technique called \emph{bootstrapping}, which was first published in 1979, addresses this problem. Rather than asserting that we know the distribution of the data, in the bootstrapping approach, we assume that the data we collected is the best approximation we have for the true, underlying distribution of the data. In statistics jargon, this means we use the sampling distribution as if it were the population distribution. In other words, we sampled some data points $x_i$ from the true distribution $F_X$ of some i.i.d.~random variables $X$, and from that we construct a new set of i.d.d.~random variables $\hat{X}$, which are discrete random variables with probability mass function:
+In the bootstrap approach, we do no assert that we know the statistical distribution that the data were drawn from. Instead, we assume that the data we collected is the best approximation we have for the true, underlying distribution of the data. In statistics jargon, this means we use the sampling distribution as if it were the population distribution. In other words, we sampled some number $n$ of data points $x_i$ from the true distribution $F_X$ of some i.i.d.~random variables $X$, and from those observed data points we construct a new set of i.d.d.~random variables $\hat{X}$, which are discrete random variables with probability mass function:
 \begin{equation*}
     f_{\hat{X}}(x') = \frac{\#\{x' \in x_i\}}{n},
 \end{equation*}
-that is, the probability of drawing the value $x'$ is equal to the proportion of the data points $x_i$ equal to that value. If none of the $x_i$ are the same (i.e., every value is unique), then $f_{\hat{X}}(x') = 1/n$ if $x'$ is one of the values we drew and zero otherwise.
+The probability of drawing the value $x'$ is equal to the proportion of the data points $x_i$ equal to that value. If none of the $x_i$ are the same (i.e., every value is unique), then:
+\begin{equation*}
+    f_{\hat{X}}(x') = \begin{cases}
+        \tfrac{1}{n} &\text{ if } x' \in x_i \\
+        0 &\text{ otherwise}
+    \end{cases}
+\end{equation*}
 
 Strictly speaking, there are a finite number of possible draws from this population, and so the probabilities $f_{\hat{X}}(x')$ can be computed exactly. For example, say you ran an experiment and drew three values $x_1, x_2, x_3$. Then $f_{\hat{X}}(x')$ is $\tfrac{1}{3}$ for $x' \in \{x_1,x_2,x_3\}$ and zero otherwise. There are only 10 possible data sets that can be drawn: $\{x_1,x_1,x_1\}$ with probability $\tfrac{1}{27}$, $\{x_1,x_1,x_3\}$ with probability $\tfrac{1}{9}$, and so on, finishing with $\{x_3,x_3,x_3\}$ with probability $\tfrac{1}{27}$.
 
-Another way to say this is that bootstrapping represents \emph{resampling with replacement}. From the $n$ data points in our sample, we take a ``resample'' of $n$ data points. One of those resamples is just the original sample, that is, we pick each original data point exactly one. In the example above, this is the resample $\{x_1,x_2,x_3\}$. In all the other cases, we draw at least one data point multiple times. For example, in the resample $\{x_1,x_1,x_2\}$, we drew $x_1$ twice.
+Another way to say this is that bootstrapping represents \emph{resampling with replacement}. From the $n$ data points in our sample, we take a ``resample'' of $n$ data points, allowing replacement. One of the possible resamples is the original sample. In the example above, this is the resample $\{x_1,x_2,x_3\}$. In all the other cases, we draw at least one data point multiple times. For example, in the resample $\{x_1,x_1,x_2\}$, we drew $x_1$ twice.
 
-Some combinatorics shows that there are $\binom{2n-1}{n}$ possible resamples. For $n=3$, this yields 10 possible resamples. For $n=10$, this yields $92,378$ possible resamples. For $n=25$, this yields more than $10^{13}$ possible resamples. Thus, for all but the smallest data sets, it is not feasible to consider all possible resamples. A scientific study might perform $1,000$ or 1 million bootstraps, randomly resampling the original data, and then stop, rather than exhaustively considering all the possible combinations.
+Some combinatorics shows that there are $\binom{2n-1}{n}$ possible resamples. For $n=3$, this yields 10 possible resamples. For $n=10$, this yields $92,378$ possible resamples. For $n=25$, this yields more than $10^{13}$ possible resamples. Thus, for all but the smallest data sets, it is not feasible to consider all possible resamples. A scientific study might perform $1,000$ or 1 million bootstraps, randomly resampling the original data $1,000$ or 1 million times, and then stop. Very few studies exhaustively considering all the possible combinations. This means there is some stochasticity in practical applications of the bootstrap. In practice, the number of bootstraps is chosen to be quite large in order to minimize any of these stochastic effects.
 
-Bootstraps can be used to construct confidence intervals on some estimator. There are a few different mathematical approaches; the simplest is called the \emph{percentile method}. Given a statistic $t$ and data points $x_i$, draw many bootstraps $x^{(j)}$, and compute $t(x^{(j)})$ for each bootstrap. The lower confidence interval $\hat{T}_-$ is the $\tfrac{\alpha}{2}$ quantile of the bootstrapped statistics $t(x^{(j)})$, and the upper confidence interval $\hat{T}_+$ is the $1-\tfrac{\alpha}{2}$ quantile. In other words, the confidence intervals for the estimator are equal to the quantiles of the statistic computed on many bootstraps of the data.
+Bootstraps can be used to construct confidence intervals on some estimator. There are a few different mathematical approaches, the simplest of which is called the \emph{percentile method}. Given a statistic $t$ and data points $x_i$, draw many bootstraps $x^{(j)}$, and compute $t(x^{(j)})$ for each bootstrap. The lower confidence interval $\hat{T}_-$ is the $\tfrac{\alpha}{2}$ quantile of the bootstrapped statistics $t(x^{(j)})$, and the upper confidence interval $\hat{T}_+$ is the $1-\tfrac{\alpha}{2}$ quantile. In other words, the confidence intervals for the estimator are equal to the quantiles of the statistic computed on many bootstraps of the data.
 
-\section{Jackknife}
+\subsection{Jackknife}
 
-The bootstrap and the \emph{jackknife} are the two most popular resampling techniques. In the bootstrap, we draw $n$ data points with replacement, for a total of $\binom{2n-1}{n}$ resamples. This number of resamples is typically very large, so, in effect, the bootstrap is a Monte Carlo method; we select and evaluate only a fixed number of resamples. The jackknife, by contrast, involves taking just $n$ resamples, each of size $n-1$. In each resample, one point is left out, so the jackknife is sometimes called ``delete-1'' resampling. The advantage of the jackknife is that evaluating $n$ resamples is usually computationally feasible, so it ceases to be a Monte Carlo method.
+In the bootstrap, we draw $n$ data points with replacement, yielding possible $\binom{2n-1}{n}$ resamples, and we select a subset at random to analyze. The \emph{jackknife}, by contrast, involves taking just $n$ resamples, each of size $n-1$. In each resample, all the original data points are used, except one, which is left out. The jackknife is therefore sometimes called ``delete-1'' resampling. The advantage of the jackknife is that evaluating $n$ resamples is computationally feasible, so it ceases to be a Monte Carlo method.
 
-Compute estimators $\hat{\theta}_{(i)}$, then pseudovalues $\tilde{\theta}_i = n \hat{\theta} -(n-1) \hat{\theta}_{(i)}$, bias-corrected estimator is $n\hat{\theta} - (n-1)\hat{\theta}_{(\cdot)} = \frac{1}{n}\sum_i \tilde{\theta}_i = \tilde{\theta}$, then get confidence intervals
-$$
-\frac{\tilde{\theta} - \theta}{\tilde{s}^2 /n} \approx t_{n-1}
-$$t
+One might be tempted to proceed with the jackknife in the same way we did the bootstrap: for a statistic $t$, enumerate the $n$ resamples $x^{(j)}$, compute the jackknifed statistics $t(x^{(j)})$, and then look at the distribution of those jackknife statistics to compute the confidence interval. This approach would be mistaken because the resamples are all quite similar to one another, having $n-2$ of $n-1$ data points in common. Thus, the distribution of the jackknifed statistics $t(x^{(j)})$ is much narrower than the distribution of the bootstrapped statistics would be.
 
-But some problems, so you instead need to do delete-$d$ resampling, of which there are $\binom{n}{d}$ options
+The process of correctly accounting for the narrowness of these values is:
+\begin{enumerate}
+  \item Compute the jackknifed \emph{replicates} $t^{(j)} \defeq t(x^{(j)})$
+  \item Compute the jackknifed \emph{statistic}, which is the mean of the replicates: $t_\mathrm{jack} = \tfrac{1}{n} \sum_j t^{(j)}$
+  \item Compute the jackknife estimate of the variance of $T$ as $\frac{n-1}{n} \sum_j \left( t^{(j)} - t_\mathrm{jack} \right)^2$
+  \item Get the confidence intervals from the Student's $t$-distribution with $n-1$ degrees of freedom and multiply them by the jackknife estimate of the variance
+\end{enumerate}
 
-Can show that jackknife is the Taylor series approximation for the bootstrap, in the space of which of the $x_i$ get selected\footnote{http://www.jstor.org/stable/2030104}
+Those familiar with Taylor series may appreciate that the jackknife is the first-order approximation for the bootstrap in the space of the observed data $x_i$\footnote{http://www.jstor.org/stable/2030104}. Starting from the observed data, the jackknife moves a little bit in every ``direction'' by deleting a single data point and seeing what effect that has on the computed statistic. The bootstrap, on the other hand, moves about in every direction at once, wildly exploring the large but ultimately finite space of possible resamples.
+
+The jackknife has some notable flaws. For example, the jackknife performs badly when estimating used to estimate confidence intervals for the sample median. In these cases, one needs to resort to the bootstrap or to other resampling methods, such as delete-$d$ resampling, which yields $\binom{n}{d}$ possible resamples.
 
 \section{Profile method}
 
